# foodbank-and-shelter

./: .gitignore  README.md  pyproject.toml
foodbank_and_shelter/: app.py  quickstart.py  sms_server.py
foodbank_and_shelter/dashboard/: twilio_to_google_sheet.py
foodbank_and_shelter/knowledge_base/: db_creation.py  scrape_yourpeerNYC.py  static_kb_app.py
foodbank_and_shelter/tutorial_samples/: chat_memory_management.py  chat_perplexity.py  client_example.py  local_text.txt  serve_example.py
foodbank_and_shelter/tutorial_samples/sql_csv_samples/: csv_example.py  foodpantries_query.py  quickstart.py
foodbank_and_shelter/tutorial_samples/sql_csv_samples/Update SQLite DB Example/: test_pantry.sql  test_pantry_update_sqlite_example.py
foodbank_and_shelter/tutorial_samples/sql_csv_samples/Update_SQLite_DB_Example/: demo_server.py
tests/: test_endpoint.py
